# adaptive-mold

./: PROMPT.md  README.md  build.py  environment.yml  main.py  pyproject.toml
adaptive_mold/: __init__.py
adaptive_mold/app/: __init__.py  __main__.py  main_window.py  ui_helpers.py  view3d.py  welcome_screen.py
adaptive_mold/core/: __init__.py  path_planner.py  serial_manager.py  step_loader.py
adaptive_mold/data/: adaptive_mold.db
adaptive_mold/models/: __init__.py  db.py  schemas.py
adaptive_mold/resources/: __init__.py  mock_controller.py  sample_geometry.json
