[project]
name = "adaptive-mold"
version = "0.1.0"
description = "PySide6 GUI for STEP file loading, 3D wireframe visualization, path planning, and serial communication with Arduino controllers"
readme = "README.md"
requires-python = ">=3.11"
# Dependencies managed via conda - see environment.yml
dependencies = []

[project.scripts]
adaptive-mold = "adaptive_mold.app.__main__:main"
mock-controller = "adaptive_mold.resources.mock_controller:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adaptive_mold"]
